Ajout des fichiers pour déploiement Render

--- a/main/templates/boutique/boutique.html
+++ b/main/templates/boutique/boutique.html
@@ -29,7 +29,7 @@
     <button class="tab-btn" onclick="showCategory('informatique', this)">
         <i class="bi bi-laptop"></i> Informatique
     </button>
-    <button class="tab-btn" onclick="showCategory('sport', this)">
+    <button class="tab-btn" onclick="showCategory('equipement_sportif', this)">
     <i class="fas fa-basketball-ball"></i> Équipements Sportifs
 </button>
 
