ajout de cathégorie

--- a/main/templates/boutique/boutique.html
+++ b/main/templates/boutique/boutique.html
@@ -44,10 +44,10 @@
 <button class="tab-btn" onclick="showCategory('lunetterie', this)">
     <i class="bi bi-eyeglasses"></i> Lunetterie
 </button>
-<button class="tab-btn" onclick="showCategory('vetements', this)">
+<button class="tab-btn" onclick="showCategory('vêtements', this)">
     <i class="fas fa-tshirt"></i> Vêtements
 </button>
-<button class="tab-btn" onclick="showCategory('cosmetique', this)">
+<button class="tab-btn" onclick="showCategory('cosmétique', this)">
     <i class="fas fa-droplet"></i> Cosmétique
 </button>
 <button class="tab-btn" onclick="showCategory('autres', this)">
